--- a/src/SyncService/AssemblyInfo.cs.in
+++ b/src/SyncService/AssemblyInfo.cs.in
@@ -3,15 +3,15 @@ using System.Runtime.CompilerServices;
 
 //
 // General Information about an assembly is controlled through the following 
-// set of attributes. Change these attribute values to modify the information
-// associated with an assembly.
+// set of attributes.
 //
+
 [assembly: AssemblyTitle("")]
 [assembly: AssemblyDescription("")]
 [assembly: AssemblyConfiguration("")]
-[assembly: AssemblyCompany("")]
-[assembly: AssemblyProduct("")]
-[assembly: AssemblyCopyright("")]
+[assembly: AssemblyCompany("Novell, Inc.")]
+[assembly: AssemblyProduct("Simias")]
+[assembly: AssemblyCopyright("(c) 2004-2005 Novell, Inc.")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]		
 
@@ -25,8 +25,10 @@ using System.Runtime.CompilerServices;
 //
 // You can specify all the values or you can default the Revision and Build Numbers 
 // by using the '*' as shown below:
+//
 
 [assembly: AssemblyVersion("@_VERSION_@")]
+[assembly: AssemblyInformationalVersion("@_VERSION_@")]
 
 //
 // In order to sign your assembly you must specify a key to use. Refer to the 
