--- a/SimiasLib.csproj
+++ b/SimiasLib.csproj
@@ -17,7 +17,7 @@
                 DelaySign = "false"
                 OutputType = "Library"
                 PreBuildEvent = ""
-                PostBuildEvent = "if not exist $(SolutionDir)stage mkdir $(SolutionDir)stage&#xd;&#xa;if not exist $(SolutionDir)stage\web mkdir $(SolutionDir)stage\web&#xd;&#xa;if not exist $(SolutionDir)stage\web\bin mkdir $(SolutionDir)stage\web\bin&#xd;&#xa;copy $(TargetFileName) $(SolutionDir)stage\web\bin&#xd;&#xa;if exist $(TargetName).pdb copy $(TargetName).pdb $(SolutionDir)stage\web\bin&#xd;&#xa;copy $(SolutionDir)external\log4net\bin\net\1.1\release $(SolutionDir)stage\web\bin&#xd;&#xa;"
+                PostBuildEvent = "if not exist $(SolutionDir)stage mkdir $(SolutionDir)stage&#xd;&#xa;if not exist $(SolutionDir)stage\etc mkdir $(SolutionDir)stage\etc&#xd;&#xa;if not exist $(SolutionDir)stage\web mkdir $(SolutionDir)stage\web&#xd;&#xa;if not exist $(SolutionDir)stage\web\bin mkdir $(SolutionDir)stage\web\bin&#xd;&#xa;if not exist $(SolutionDir)stage\web\modules mkdir $(SolutionDir)stage\web\modules&#xd;&#xa;copy $(TargetFileName) $(SolutionDir)stage\web\bin&#xd;&#xa;if exist $(TargetName).pdb copy $(TargetName).pdb $(SolutionDir)stage\web\bin&#xd;&#xa;copy $(SolutionDir)external\log4net\bin\net\1.1\release $(SolutionDir)stage\web\bin&#xd;&#xa;copy $(SolutionDir)src\Common\Simias.config $(SolutionDir)stage\etc&#xd;&#xa;copy $(SolutionDir)src\Common\Simias.log4net $(SolutionDir)stage\etc&#xd;&#xa;copy $(SolutionDir)src\SimiasLib.dll\SimiasLib.conf $(SolutionDir)stage\web\modules"
                 RootNamespace = "Simias"
                 RunPostBuildEvent = "OnBuildSuccess"
                 StartupObject = ""
@@ -106,8 +106,8 @@
                 />
                 <Reference
                     Name = "SimiasClient"
-                    AssemblyName = "SimiasClient"
-                    HintPath = "src\SimiasClient\bin\Debug\SimiasClient.dll"
+                    Project = "{E38BAF80-9B31-4D15-A002-E775B96FAFA6}"
+                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
                 />
             </References>
         </Build>
