--- a/src/POBoxWS/POBoxWS.csproj
+++ b/src/POBoxWS/POBoxWS.csproj
@@ -85,7 +85,7 @@
                     HintPath = "..\..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.XML.dll"
                 />
                 <Reference
-                    Name = "Simias"
+                    Name = "SimiasLib"
                     Project = "{7839E703-0177-4162-B083-BCFD4ED1CC1B}"
                     Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
                 />
