--- a/src/WebService/SimiasWebService.csproj
+++ b/src/WebService/SimiasWebService.csproj
@@ -90,14 +90,14 @@
                     HintPath = "..\..\..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.XML.dll"
                 />
                 <Reference
-                    Name = "Simias"
-                    AssemblyName = "SimiasLib"
-                    HintPath = "..\..\stage\web\bin\SimiasLib.dll"
+                    Name = "SimiasClient"
+                    Project = "{E38BAF80-9B31-4D15-A002-E775B96FAFA6}"
+                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
                 />
                 <Reference
-                    Name = "SimiasClient"
-                    AssemblyName = "SimiasClient"
-                    HintPath = "..\..\..\..\final\web\bin\SimiasClient.dll"
+                    Name = "SimiasLib"
+                    Project = "{7839E703-0177-4162-B083-BCFD4ED1CC1B}"
+                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
                 />
             </References>
         </Build>
