--- a/test/SimiasTestsWS/SimiasTestsWS.csproj
+++ b/test/SimiasTestsWS/SimiasTestsWS.csproj
@@ -76,7 +76,7 @@
                 />
                 <Reference
                     Name = "System.XML"
-                    AssemblyName = "System.XML"
+                    AssemblyName = "System.Xml"
                     HintPath = "..\..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.XML.dll"
                 />
                 <Reference
@@ -95,9 +95,9 @@
                     HintPath = "..\..\stage\web\bin\SimiasClient.dll"
                 />
                 <Reference
-                    Name = "Simias"
-                    AssemblyName = "Simias"
-                    HintPath = "..\..\stage\web\bin\SimiasLib.dll"
+                    Name = "SimiasLib"
+                    AssemblyName = "SimiasLib"
+                    HintPath = "..\..\..\final\web\bin\SimiasLib.dll"
                 />
             </References>
         </Build>
